...
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/leftVerticalGuideline"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/monthSpinner"
        style="@style/SpinnerTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
...
        android:text="@string/date_slash"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/monthSpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/daySpinner"
        style="@style/SpinnerTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
...
        android:text="@string/date_slash"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/daySpinner"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/yearSpinner"
        style="@style/SpinnerTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
...
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/leftVerticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/horizGuideline1" />


    <Spinner
        android:id="@+id/hourSpinner"
        style="@style/SpinnerTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
...
        android:text="@string/hour_text"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/hourSpinner"
        app:layout_constraintTop_toTopOf="@+id/horizGuideline1" />

    <Spinner
        android:id="@+id/meridiemSpinner"
        style="@style/SpinnerTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
...
        android:text="@string/pain_rating"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/leftVerticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/horizGuideline3" />

    <Spinner
        android:id="@+id/painRatingSpinner"
        style="@style/SpinnerTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
...
        android:spinnerMode="dropdown"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/painRatingHeader"
        app:layout_constraintTop_toTopOf="@+id/horizGuideline3" />

    <Button
        android:id="@+id/newFlareBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
...
        android:text="@string/new_info_submission"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/updateFlareBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <Button
        android:id="@+id/addTriggerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="addTriggerField"
        android:text="Add Trigger"
        app:layout_constraintEnd_toStartOf="@+id/rightVerticalGuideline"
        app:layout_constraintTop_toTopOf="@+id/horizGuideline3" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
...
        app:layout_constraintBottom_toTopOf="@+id/horizGuidelineEnd"
        app:layout_constraintEnd_toStartOf="@+id/rightVerticalGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@+id/addTriggerBtn">

        <LinearLayout
            android:id="@+id/editTriggerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <android.support.constraint.Guideline
...
