<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/triggerSpinner"
        android:layout_width="112dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:entries="@array/triggerTypes"
        style="@style/SpinnerTheme"
        android:paddingLeft="4dp"
        android:paddingRight="30dp"
        android:spinnerMode="dropdown"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/triggerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Trigger Name"
        android:textSize="16sp"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/cancelTriggerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="deleteTriggerField"
        android:text="X" />
</LinearLayout>
