<resources>
    <string name="app_name">Flare Visualizer</string>
    <string name="trigger_list">%1$s Trigger List</string>
    <string name="pain_rating">Pain Rating:</string>
    <string name="new_info_submission">Add Flare</string>
    <string name="update_info_submission">Update Flare</string>
    <string name="old_info_fetch">Fetch Old Info</string>
    <string name="hour_text">o\' clock</string>
    <string name="time_header">Time:</string>
    <string name="date_slash">/</string>
    <string name="date_header">Date:</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="app_description">An app for tracking pain flares</string>
    <string name="copyright">&#169; Jesse Galvan, Sammy Jia, Cassady Latham, Zoe Tacderas</string>

...
